...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="35C-CA-Bgw">
                                <rect key="frame" x="16" y="134" width="288" height="40"/>
                                <constraints>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a0m-L2-BvV">
                                <rect key="frame" x="16" y="194" width="288" height="40"/>
                                <constraints>
...
            <objects>
                <navigationController id="InW-TA-3gT" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Menu" id="BNi-6g-zan"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UZS-ck-S8K">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                                    <constraint firstAttribute="height" constant="30" id="KgQ-oD-xoF"/>
                                </constraints>
                                <state key="normal" title="Fire Fighter">
                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="30" id="tmh-Cs-ejr"/>
                                </constraints>
                                <state key="normal" title="Police">
                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="30" id="nZe-iU-INI"/>
                                </constraints>
                                <state key="normal" title="Ambulance">
                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="Orh-jJ-99c"/>
                    </view>
                    <navigationItem key="navigationItem" title="Emergency Type" id="YfM-L6-9yo">
                        <barButtonItem key="leftBarButtonItem" image="icons8-logout-rounded-left-25" id="fF2-AQ-SNe">
                            <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9p-L2-Cg1">
                                <rect key="frame" x="16" y="498" width="288" height="30"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone No." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vfm-ha-vQx">
                                <rect key="frame" x="16" y="198" width="288" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4YO-h6-ly1">
                                <rect key="frame" x="16" y="156" width="288" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Full Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nns-q8-mlb">
                                <rect key="frame" x="16" y="114" width="288" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="16" y="471" width="284" height="40"/>
                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Reports" id="kod-3S-vTl"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hK8-dd-eXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
