...
                    DispatchQueue.main.async(execute:{
                        self.delegate?.didLoadData(title: "Unsuccessfull Submission", message: "Something went wrong!", isSuccessful: false)
                    })
                } else {
                    // successful submission pass alert and true
                    DispatchQueue.main.async(execute:{
                        self.delegate?.didLoadData(title: "Seccussfull Submission", message: "Report has been filed successfully", isSuccessful: true)
                    })
                }
            }
        })
        task.resume()
        
...
